# dotfiles

./: README.md
fish/.config/fish/: .gitignore  config.fish
fish/.config/fish/conf.d/: windows_vm.fish
gdb/: .gdbinit
git/: .gitconfig
i3/.config/i3/: config
i3/.config/i3status/: config
mpv/.config/mpv/: mpv.conf
neovim/.config/nvim/: init.vim  installer.sh
neovim/.config/nvim/snippets/: c.snip
ranger/.config/ranger/: rc.conf  rifle.conf
rofi/.config/rofi/: config  google.sh  search.sh
rust/.cargo/: config
sway/.config/i3blocks/: config
sway/.config/i3blocks/utils/: Cargo.toml
sway/.config/i3blocks/utils/src/: main.rs
sway/.config/sway/: config  mute.sh  startup.sh
sway/.xkb/: xkbmap  xkbmap_numpad
tmux/: .tmux.conf
