[package]
name = "utils"
version = "0.1.0"
authors = ["Nicolas goy <kuon@goyman.com>"]
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-pulsectl = "0.2.6"

[[bin]]
name = "mic_status"
path = "src/main.rs"
